Closed Bug 1942902 Opened 1 year ago Closed 1 year ago

Cancelling navigator.credentials.get() by the user should throw NotAllowedError, instead it throws an AbortError

Categories

(Core :: DOM: Web Authentication, defect, P3)

Firefox 134
defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox137 --- fixed

People

(Reporter: jespertheend, Assigned: jschanck)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/132.0.0.0 Safari/537.36

Steps to reproduce:

  1. Visit https://firefox-credentials-user-abort.glitch.me/
  2. Click 'Get credentials'
  3. Cancel the prompt

Actual results:

The error is:
DOMException: AbortError The operation was aborted.

Expected results:

The error should be a NotAllowedError

See the spec:
https://w3c.github.io/webauthn/#sctn-create-request-exceptions:~:text=requests%20or%20the%20related%20origins%20validation%20procedure%20failed.-,NotAllowedError,including%20common%20ones%20like%20the%20user%20canceling%20out%20of%20the%20ceremony.,-Some%20of%20these%20causes%20are%20documented%20throughout%20this

Component: Untriaged → DOM: Web Authentication
Product: Firefox → Core

The severity field is not set for this bug.
:jschanck, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(jschanck)
Assignee: nobody → jschanck
Severity: -- → S3
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(jschanck)
Priority: -- → P3
Pushed by jschanck@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a5f3df41c353 return NotAllowedError for user-cancelled WebAuthn get requests on macOS. r=keeler
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
QA Whiteboard: [qa-137b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: