Bug 1942902 - return NotAllowedError for user-cancelled WebAuthn get requests on macOS. r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D238094